--- a/angular/package.json
+++ b/angular/package.json
@@ -9,6 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "dev": "ng serve --configuration=development",
+    "prod": "ng build --configuration=production",
     "gh-pages": "ng build --configuration=production --base-href 'https://ilmalte.github.io/developer-fortune-cookies/' && npx angular-cli-ghpages — dir=dist/fortune-cookies"
   },
   "private": true,
