--- a/.github/workflows/continuous_integration_workflow.yml
+++ b/.github/workflows/continuous_integration_workflow.yml
@@ -18,8 +18,10 @@ jobs:
           node-version: "10.x"
 
       - name: Install and Build
+        working-directory: ./angular
         run: |
-          cd ./angular && npm install && npm run prod
+          npm install
+          npm run prod
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
