--- a/.github/workflows/continuous_integration_workflow.yml
+++ b/.github/workflows/continuous_integration_workflow.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+    working-directory: ./angular
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -18,7 +19,6 @@ jobs:
           node-version: "10.x"
 
       - name: Install and Build
-        working-directory: ./angular
         run: |
           npm install
           npm run prod
@@ -27,5 +27,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FOLDER: ./angular/dist
+          FOLDER: ./dist
           BRANCH: gh-pages
