--- a/.github/workflows/continuous_integration_workflow.yml
+++ b/.github/workflows/continuous_integration_workflow.yml
@@ -8,7 +8,9 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-    working-directory: ./angular
+    defaults:
+      run:
+        working-directory: ./angular
     steps:
       - name: Checkout
         uses: actions/checkout@v2
