--- a/.github/workflows/continuous_integration_workflow.yml
+++ b/.github/workflows/continuous_integration_workflow.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install and Build
         run: |
           npm install
-          npm run prod
+          ng build --configuration=production
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
