--- a/.github/workflows/continuous_integration_workflow.yml
+++ b/.github/workflows/continuous_integration_workflow.yml
@@ -18,12 +18,12 @@ jobs:
       - name: Set-up Node
         uses: actions/setup-node@v1
         with:
-          node-version: "10.x"
+          node-version: "12.14"
 
       - name: Install and Build
         run: |
           npm install
-          ng build --configuration=production
+          npm run prod
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
