ci: deploy on github pages

--- a/.github/workflows/continuous_integration_workflow.yml
+++ b/.github/workflows/continuous_integration_workflow.yml
@@ -29,5 +29,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FOLDER: ./angular/dist
+          FOLDER: ./angular/dist/fortune-cookies
           BRANCH: gh-pages
