--- a/angular/package.json
+++ b/angular/package.json
@@ -10,6 +10,7 @@
     "e2e": "ng e2e",
     "dev": "ng serve --configuration=development",
     "prod": "ng build --configuration=production",
+    "prod-gh-pages": "ng build --configuration=production --base-href 'https://ilmalte.github.io/developer-fortune-cookies/' --deploy-url 'https://ilmalte.github.io/developer-fortune-cookies/'",
     "gh-pages": "ng build --configuration=production --base-href 'https://ilmalte.github.io/developer-fortune-cookies/' && npx angular-cli-ghpages — dir=dist/fortune-cookies"
   },
   "private": true,
